<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <import type="com.barryzeha.couponsapp.common.entities.CouponEntity"/>
        <variable
            name="viewModel"
            type="com.barryzeha.couponsapp.mainModule.viewModel.MainViewModel" />
        <variable
            name="isActive"
            type="boolean" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_common_xLarge"
    android:paddingVertical="@dimen/padding_common_default"
    tools:context=".mainModule.view.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvWelcome"
        android:text="@string/main_welcome"
        android:gravity="center"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/padding_common_min"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainGuide"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnConsult"
        android:text="@string/btnConsult"
        android:onClick="@{() -> viewModel.consultCouponByCode()}"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintBottom_toTopOf="@id/mainGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCreate"

   />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCreate"
        android:text="@string/btnCreate"
        android:onClick="@{() -> viewModel.saveCoupon()}"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintBottom_toTopOf="@id/mainGuide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnConsult"
        app:isGone="@{isActive}"
        tools:visibility="visible"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilConsult"
        android:hint="@string/main_consult"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/btnConsult"
        android:layout_marginBottom="@dimen/padding_common_default"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtConsult"
            android:text="@={viewModel.coupon.code}"
            android:contentDescription="@string/main_consult"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilDescription"
        android:hint="@{isActive ? @string/coupon_active : @string/main_description }"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/tilConsult"
        android:layout_marginBottom="@dimen/padding_common_min"
        android:enabled="@{!isActive}"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtDescription"
            android:contentDescription="@string/main_description"
            android:text="@={viewModel.coupon.description}"
            />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>